apps/traditional-saju/httproute.yaml
apiVersion: "gateway.networking.k8s.io/v1"
kind: HTTPRoute
metadata:
  name: traditional-saju-secure-route
  namespace: traditional-saju
spec:
  hostnames:
    - "traditional-saju.mandacode.com"
  parentRefs:
    - name: eg
      namespace: default
      sectionName: "https"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: keycloak-service
          namespace: keycloak
          port: 8080
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: HTTPRoute
metadata:
  name: traditional-saju-default-route
  namespace: traditional-saju
spec:
  hostnames:
    - "saju.mandacode.com"
  parentRefs:
    - name: eg
      namespace: default
      sectionName: "https"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/health"
        - path:
            type: PathPrefix
            value: "/auth"
      backendRefs:
        - name: keycloak-service
          namespace: keycloak
          port: 8080
